# lmms

./: .gitmodules
.github/workflows/: build.yml
cmake/modules/: PluginList.cmake
include/: ClipView.h  Clipboard.h  ControlLayout.h  Controls.h  DataFile.h  FileBrowser.h  LinkedModelGroupViews.h  Lv2SubPluginFeatures.h  PianoRoll.h  Plugin.h  PluginFactory.h  SampleClipView.h  TrackContainerView.h
plugins/AudioFileProcessor/: AudioFileProcessor.cpp  AudioFileProcessorView.cpp
plugins/CarlaPatchbay/: CarlaPatchbay.cpp
plugins/CarlaRack/: CarlaRack.cpp
plugins/Dispersion/: Dispersion.cpp
plugins/GigPlayer/: GigPlayer.cpp
plugins/HydrogenImport/: HydrogenImport.cpp
plugins/LOMM/: LOMM.cpp
plugins/Lv2Instrument/: Lv2Instrument.cpp
plugins/MidiImport/: MidiImport.cpp
plugins/OpulenZ/: OpulenZ.cpp
plugins/Patman/: Patman.cpp
plugins/Vst3Base/: CMakeLists.txt  Vst3Base.cpp  Vst3Core.cpp  Vst3Core.h  Vst3Manager.cpp  Vst3Manager.h  Vst3Plugin.cpp  Vst3Plugin.h  Vst3PluginControlView.cpp  Vst3PluginControlView.h  Vst3PluginControls.cpp  Vst3PluginControls.h  Vst3PluginView.cpp  Vst3PluginView.h  Vst3SubPluginFeatures.cpp  Vst3SubPluginFeatures.h
plugins/Vst3Base/impl/: AttributeList.cpp  AttributeList.h  BStream.cpp  BStream.h  EventList.cpp  EventList.h  HostApplication.cpp  HostApplication.h  Message.cpp  Message.h  ParamValueQueue.cpp  ParamValueQueue.h  ParameterChanges.cpp  ParameterChanges.h
plugins/Vst3Base/vst3sdk/: CMakeLists.txt
plugins/Vst3Effect/: CMakeLists.txt  Vst3Effect.cpp  Vst3Effect.h  Vst3EffectControlDialog.cpp  Vst3EffectControlDialog.h  Vst3EffectControls.cpp  Vst3EffectControls.h
(+48 files in other folders)
